--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <div class="container">
             <div class="section-title">
                 <h4 class="text-primary text-uppercase" style="letter-spacing: 5px;">Our Services</h4>
-                <h1 class="display-4">Fresher & Organic Beans</h1>
+                <h1 class="display-4">Fresh & Organic Beans</h1>
             </div>
             <div class="row">
                 <div class="col-lg-6 mb-5">
